--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "nx": "14.4.2",
     "@nrwl/cli": "14.4.2",
+    "@nrwl/js": "^14.4.2",
+    "@nrwl/node": "^14.4.2",
     "@nrwl/workspace": "14.4.2",
-    "typescript": "~4.7.2",
-    "prettier": "^2.6.2"
+    "@polaris-sloc/cli": "^0.5.0",
+    "@polaris-sloc/polaris-nx": "^0.5.0",
+    "nx": "14.4.2",
+    "prettier": "^2.6.2",
+    "typescript": "~4.7.2"
   }
 }
