--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@polaris-sloc/common-mappings": "0.5.0",
     "@polaris-sloc/core": "0.5.0",
+    "@polaris-sloc/kubernetes": "0.5.0",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.0"
   }
