fix: add imagePullPolicy for local images

--- a/apps/horizontal-elasticity-strategy-controller/manifests/kubernetes/2-elasticity-strategy-controller.yaml
+++ b/apps/horizontal-elasticity-strategy-controller/manifests/kubernetes/2-elasticity-strategy-controller.yaml
@@ -36,6 +36,7 @@ spec:
           effect: NoSchedule
       containers:
         - image: polarissloc/horizontal-elasticity-strategy-controller:latest
+          imagePullPolicy: Never
           name: elasticity-controller
           resources:
             limits:
