fix: add imagePullPolicy for local images

--- a/apps/efficiency-controller/manifests/kubernetes/2-slo-controller.yaml
+++ b/apps/efficiency-controller/manifests/kubernetes/2-slo-controller.yaml
@@ -36,6 +36,7 @@ spec:
           effect: NoSchedule
       containers:
         - image: polarissloc/efficiency-controller:latest
+          imagePullPolicy: Never
           name: slo-controller
           resources:
             limits:
