feat: update to nx v16.1.0 and polaris v0.6.1

--- a/libs/elasticity-strategies/project.json
+++ b/libs/elasticity-strategies/project.json
@@ -1,10 +1,11 @@
 {
+  "name": "elasticity-strategies",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/elasticity-strategies/src",
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nrwl/js:tsc",
+      "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/libs/elasticity-strategies",
@@ -14,27 +15,26 @@
       }
     },
     "publish": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "command": "node tools/scripts/publish.mjs elasticity-strategies {args.ver} {args.tag}"
       },
       "dependsOn": [
         {
-          "projects": "self",
           "target": "build"
         }
       ]
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/elasticity-strategies/**/*.ts"]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/elasticity-strategies"],
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/libs/elasticity-strategies"],
       "options": {
         "jestConfig": "libs/elasticity-strategies/jest.config.ts",
         "passWithNoTests": true
