--- a/apps/k8ssandra-efficiency-slo-controller/project.json
+++ b/apps/k8ssandra-efficiency-slo-controller/project.json
@@ -1,17 +1,20 @@
 {
+  "name": "k8ssandra-efficiency-slo-controller",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/k8ssandra-efficiency-slo-controller/src",
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nrwl/node:webpack",
+      "executor": "@nx/webpack:webpack",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/k8ssandra-efficiency-slo-controller",
         "main": "apps/k8ssandra-efficiency-slo-controller/src/main.ts",
         "tsConfig": "apps/k8ssandra-efficiency-slo-controller/tsconfig.app.json",
         "assets": ["apps/k8ssandra-efficiency-slo-controller/src/assets"],
-        "externalDependencies": "none"
+        "externalDependencies": "none",
+        "target": "node",
+        "compiler": "tsc"
       },
       "configurations": {
         "production": {
@@ -28,7 +31,7 @@
       }
     },
     "serve": {
-      "executor": "@nrwl/node:node",
+      "executor": "@nx/node:node",
       "options": {
         "buildTarget": "k8ssandra-efficiency-slo-controller:build"
       },
@@ -39,15 +42,17 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/k8ssandra-efficiency-slo-controller/**/*.ts"]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/k8ssandra-efficiency-slo-controller"],
+      "executor": "@nx/jest:jest",
+      "outputs": [
+        "{workspaceRoot}/coverage/apps/k8ssandra-efficiency-slo-controller"
+      ],
       "options": {
         "jestConfig": "apps/k8ssandra-efficiency-slo-controller/jest.config.ts",
         "passWithNoTests": true
