--- a/libs/slos/tsconfig.lib.json
+++ b/libs/slos/tsconfig.lib.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
+    "inlineSources": true,
     "types": [],
     "module": "commonjs"
   },
