feat: dynamically set node name for prometheus pod

--- a/testbed/cluster/files/helm/kube-prometheus-stack/values.yaml
+++ b/testbed/cluster/files/helm/kube-prometheus-stack/values.yaml
@@ -2288,9 +2288,7 @@ prometheus:
     ## Define which Nodes the Pods are scheduled on.
     ## ref: https://kubernetes.io/docs/user-guide/node-selection/
     ##
-    nodeSelector: {
-      kubernetes.io/hostname: polaris-testbed-worker
-    }
+    nodeSelector: {}
 
     ## Secrets is a list of Secrets in the same namespace as the Prometheus object, which shall be mounted into the Prometheus Pods.
     ## The Secrets are mounted into /etc/prometheus/secrets/. Secrets changes after initial creation of a Prometheus object are not
