--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nx/workspace": "16.1.0",
     "@polaris-sloc/cli": "~0.6.1",
     "@polaris-sloc/polaris-nx": "~0.6.1",
+    "@polaris-sloc/schema-gen": "0.6.1",
     "@types/jest": "29.4.4",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "5.59.2",
@@ -26,12 +27,13 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "~28.1.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "16.1.0",
     "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "tsconfig-paths": "^3.14.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "5.0.4"
   },
   "dependencies": {
