--- a/libs/elasticity-strategies/tsconfig.lib.json
+++ b/libs/elasticity-strategies/tsconfig.lib.json
@@ -4,7 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "declaration": true,
     "inlineSources": true,
-    "types": [],
+    "types": ["node"],
     "module": "commonjs"
   },
   "include": ["**/*.ts"],
