--- a/libs/elasticity-strategies/crds/k8ssandraelasticitystrategies.elasticity.polaris-slo-cloud.github.io.yaml
+++ b/libs/elasticity-strategies/crds/k8ssandraelasticitystrategies.elasticity.polaris-slo-cloud.github.io.yaml
@@ -2,7 +2,7 @@ kind: CustomResourceDefinition
 apiVersion: apiextensions.k8s.io/v1
 metadata:
   annotations:
-    polaris-slo-cloud.github.io/schema-gen-version: 0.5.0
+    polaris-slo-cloud.github.io/schema-gen-version: 0.6.1
   name: k8ssandraelasticitystrategies.elasticity.polaris-slo-cloud.github.io
 spec:
   group: elasticity.polaris-slo-cloud.github.io
@@ -178,10 +178,57 @@ spec:
                       format: int64
                     minResources:
                       type: object
-                      description: The minimum resources a k8ssandra node should have.
+                      properties:
+                        memoryMiB:
+                          type: integer
+                          description: |-
+                            The memory in MiB.
+
+                            This must be an integer.
+                          format: int64
+                        milliCpu:
+                          type: integer
+                          description: >-
+                            The CPU cores in milli CPU (1000 milli CPU = 1 CPU
+                            core).
+
+
+                            This must be an integer.
+                          format: int64
+                      required:
+                        - memoryMiB
+                        - milliCpu
+                      description: >-
+                        Describes the resources used/required by a container or
+                        set of containers.
                     maxResources:
                       type: object
-                      description: The maximum resources a k8ssandra node should have.
+                      properties:
+                        memoryMiB:
+                          type: integer
+                          description: |-
+                            The memory in MiB.
+
+                            This must be an integer.
+                          format: int64
+                        milliCpu:
+                          type: integer
+                          description: >-
+                            The CPU cores in milli CPU (1000 milli CPU = 1 CPU
+                            core).
+
+
+                            This must be an integer.
+                          format: int64
+                      required:
+                        - memoryMiB
+                        - milliCpu
+                      description: >-
+                        Describes the resources used/required by a container or
+                        set of containers.
+                    tolerance:
+                      type: integer
+                      format: int64
                   description: Configuration options for K8ssandraElasticityStrategy.
             apiVersion:
               type: string
