--- a/libs/slos/crds/k8ssandraefficiencymetricmappings.metrics.polaris-slo-cloud.github.io.yaml
+++ b/libs/slos/crds/k8ssandraefficiencymetricmappings.metrics.polaris-slo-cloud.github.io.yaml
@@ -75,8 +75,15 @@ spec:
                         The time duration that is used for calculating the
                         average CPU utilisation in seconds.
                       format: int64
+                    writeLoadTimeRange:
+                      type: integer
+                      description: >-
+                        The time duration that is used for calculating the
+                        average write load in seconds.
+                      format: int64
                   required:
                     - cpuUtilisationTimeRange
+                    - writeLoadTimeRange
                   description: >-
                     Limited alternative for `Omit<T, K>` that provides a
                     workaround for an issue with ts-json-schema-generator.
