--- a/libs/slos/crds/k8ssandraefficiencymetricmappings.metrics.polaris-slo-cloud.github.io.yaml
+++ b/libs/slos/crds/k8ssandraefficiencymetricmappings.metrics.polaris-slo-cloud.github.io.yaml
@@ -2,7 +2,7 @@ kind: CustomResourceDefinition
 apiVersion: apiextensions.k8s.io/v1
 metadata:
   annotations:
-    polaris-slo-cloud.github.io/schema-gen-version: 0.6.1
+    polaris-slo-cloud.github.io/schema-gen-version: 0.7.0
   name: k8ssandraefficiencymetricmappings.metrics.polaris-slo-cloud.github.io
 spec:
   group: metrics.polaris-slo-cloud.github.io
@@ -74,16 +74,15 @@ spec:
                       description: >-
                         The time duration that is used for calculating the
                         average CPU utilisation in seconds.
+                      default: 300
                       format: int64
                     writeLoadTimeRange:
                       type: integer
                       description: >-
                         The time duration that is used for calculating the
                         average write load in seconds.
+                      default: 300
                       format: int64
-                  required:
-                    - cpuUtilisationTimeRange
-                    - writeLoadTimeRange
                   description: >-
                     Limited alternative for `Omit<T, K>` that provides a
                     workaround for an issue with ts-json-schema-generator.
